set line height for right label, so they will be aligned correctly with left one

--- a/frontend/src/global_styles/content/work_packages/timelines/elements/_labels.sass
+++ b/frontend/src/global_styles/content/work_packages/timelines/elements/_labels.sass
@@ -52,6 +52,7 @@
     margin: 0
     padding: 0
     left: 100%
+    line-height: 1rem
 
   .labelRight.not-empty
     @include timeline-label
@@ -74,7 +75,7 @@
     position: absolute
     right: 0px
     // Then translate by its own width + some margin
-    transform: translateX(calc(100% + 10px))
+    transform: translateX(calc(100% + 15px))
     font-size: 12px
     @include scheduling-icon
 
